# claude-recall

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  ONBOARDING.md  README.md  bootstrap.ps1  bootstrap.sh  settings.json
agents/: coder.md  critic.md  explore.md  local-ops.md  plan.md  quick-lookup.md  virtual-me.md
hooks/: git-safety-guard.ps1  git-safety-guard.sh  local-llm-gate.sh  route-to-local.ps1  route-to-local.sh  session-handoff-load.ps1  session-handoff-load.sh  session-handoff-save.ps1  (+1 more)
tools/session-archive/: pyproject.toml
tools/session-archive/docs/: E-export-obsidian-design.md  L2-design-notes.md
tools/session-archive/scripts/: obsidian-memory-pipeline.plist.template  pipeline.sh  setup.sh
tools/session-archive/src/session_archive/: __init__.py  checkpoints.py  cli.py  commit_match.py  compare.py  db.py  ingest.py  learnings.py  local_client.py  machine.py  mask.py  mcp_server.py  prompt.py  recall.py  schema.sql  scorer.py  summarize.py  summarize_client.py  trigger.py  vault_git.py
tools/session-archive/src/session_archive/exporter/: __init__.py  body.py  decisions.py  frontmatter.py  state.py  writer.py
tools/session-archive/tests/: test_checkpoints.py  test_commit_match.py  test_export_body.py  test_export_decisions.py  test_export_frontmatter.py  test_export_orchestrator.py  test_export_state.py  test_export_writer.py  test_ingest_root.py  test_learnings.py  test_local_client.py  test_mask.py  test_mcp_server.py  test_prompt.py  test_recall.py  test_scorer.py  test_summarize_client.py  test_trigger.py  test_vault_git.py
(+13 files in other folders)
